# rsdd-ocaml

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  dune-project  rsdd.opam  rsdd.opam.template
.cargo/: config
.github/workflows/: ocaml-ci.yml  rust-ci.yml
src/: dune  lib.rs  rsdd.ml  rsdd.mli
test/: dune  test.ml
