[package]
name = "rsdd"
version = "0.1.0"
authors = ["Matt Wang <matt@matthewwang.me>"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
ocaml = { version = "^1.0.0-beta" }
rsdd = { git = "https://github.com/minsungc/rsdd-dappl", rev = "dc8f74095dd02bbed849233e4cc23f578fdcd1af" }

[build-dependencies]
ocaml-build = {version = "^1.0.0-beta"}
